# MetaFetcher-python

./: .dockerignore  .gitignore  db.toml  pyproject.toml  requirements.txt
data/: database_config.toml
data/dumps/: .gitignore  files.json
db_dump/: cli.py  insert_task.py  parse_db_dump.py  parsinglib.py  stats.py  toml_load.py  utils.py
db_dump/db/: __init__.py
db_dump/dtypes/: CSVSerializable.py  Metabolite.py  MetaboliteConsistent.py  MetaboliteDiscovery.py  MetaboliteExternal.py  SecondaryID.py  __init__.py
db_dump/fileformats/: NamesSpecialCharacters.py  SDFParser.py  XMLFastParser.py  XMLRecursiveParser.py
db_dump/metparselib/: cluster1d.py  edb_specific.py  padding.py  parsinglib.py  structs.py  types.py
db_dump/process/: NamesSpecialCharacters.py
discovery/: DiscoveryAlg.py  __init__.py  __main__.py  alg.py  consistency.py  metabolite.py  options.py  pandas.py  query.py  querytest.py
discovery/db/: __init__.py  duckdb.py
discovery/profiles/: basic_discovery.toml  full_discovery.toml
discovery/utils/: cluster1d.py  output.py  padding.py
docs/: discovery_options.md  download_db_dumps.md  import_db_dumps.md  index.md  limitations.md
edb_builder/: __main__.py  run_pipe.py
edb_handlers/: check_dumps.py  db_sources.py
edb_handlers/core/: ApiClientBase.py
edb_handlers/edb_chebi/: parselib.py  query.py
edb_handlers/edb_kegg/: fetch_kegg_api_bulk.py
edb_handlers/edb_pubchem/: parselib.py
mdb_builder/discovery/: DiscoveryAlg.py
mdb_builder/mapping/: consistent2disco.py
metcore/: mapper.py  utils.py
tests/: ddb_item_builder.py
(+39 files in other folders)
