[project]
name = "MetaFetcherDB-builder"
description = "Used to construct & update MetaFetcher DB"
version = "0.2.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncpg>=0.31.0",
    "lxml>=6.0.2",
    "pipebro",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
pipebro = { git = "https://github.com/oboforty/pipebro.git" }
