[project]
name = "MetaFetcherDB-builder"
description = "Used to construct & update MetaFetcher DB"
version = "0.2.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "aiogzip>=1.1.0",
    "aiohttp>=3.13.2",
    "asyncpg>=0.31.0",
    "duckdb>=1.4.3",
    "lxml>=6.0.2",
    "psycopg2>=2.9.11",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "tabulate>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
